tests/cli_diagnostics/run_python_ffi_missing_cap.stderr.golden
tests/fixtures/run_python_ffi.curlee:2:12: error: python capability required
  |
  |   unsafe { python_ffi.call(); }
  |            ^^^^^^^^^^^^^^^^^
